--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1: e,f,g
+Question2: a,f,d
+Question3: a,c,d,e,g
+Question4: a,d,e,f
