--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1:a,f,g
+Question2:b,c,d
+Question3:a,c,d,f,g
+Question4:a,b,d,f
