--- a/static/admin/userdata/tests/test2.yml
+++ b/static/admin/userdata/tests/test2.yml
@@ -1,17 +1,17 @@
 testName: test2
-Question1:
-Question2:
-Question3:
-Question4:
-Question5:
-Question6:
-Question7:
-Question8:
-Question9:
-Question10:
-Question11:
-Question12:
-Question13:
-Question14:
-Question15:
-Question16:
+Question1:c
+Question2:c
+Question3:b
+Question4:a
+Question5:b
+Question6:a,c,d,g
+Question7:b,c,e
+Question8:a,c,d
+Question9:b
+Question10:b
+Question11:a,d
+Question12:b
+Question13:a,b,d
+Question14:b
+Question15:b
+Question16:b
