--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1:a,b,f
+Question2:a,b,f
+Question3:b,c,d,e,g
+Question4:a,b,e,f
