--- a/static/admin/userdata/tests/test2.yml
+++ b/static/admin/userdata/tests/test2.yml
@@ -1,17 +1,17 @@
 testName: test2
-Question1:
-Question2:
-Question3:
-Question4:
-Question5:
-Question6:
-Question7:
-Question8:
-Question9:
-Question10:
-Question11:
-Question12:
-Question13:
-Question14:
-Question15:
-Question16:
+Question1: c
+Question2: c
+Question3: b
+Question4: b
+Question5: c
+Question6: a,b,c,g
+Question7: a,b,c
+Question8: a,c,d
+Question9: a
+Question10: b
+Question11: d
+Question12: a
+Question13: b
+Question14: c
+Question15: b
+Question16: b
