--- a/static/admin/userdata/tests/test4.yml
+++ b/static/admin/userdata/tests/test4.yml
@@ -1,18 +1,18 @@
 testName: test4
-Question1:
-Question2:
-Question3:
-Question4:
-Question5:
-Question6:
-Question7:
-Question8:
-Question9:
-Question10:
-Question11:
-Question12:
-Question13:
-Question14:
-Question15:
-Question16:
-Question17:
+Question1:a
+Question2:g
+Question3:b,c,e
+Question4:a
+Question5:b
+Question6:a,d,e
+Question7:d
+Question8:g
+Question9:b
+Question10:b
+Question11:b
+Question12:b,d
+Question13:b
+Question14:a
+Question15:b,d,e
+Question16:b
+Question17:c,d
