--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1: b, d, f
+Question2: a, d, f
+Question3: b, c, d, e, g
+Question4: a, d, e, f
