--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1:a,c,f
+Question2:b,d,f
+Question3:a,b,c,e,f
+Question4:a,b,e,f
