--- a/static/admin/userdata/tests/test1.yml
+++ b/static/admin/userdata/tests/test1.yml
@@ -1,5 +1,5 @@
 testName: test1
-Question1:
-Question2:
-Question3:
-Question4:
+Question1:  f , a , c
+Question2:  a , f , c
+Question3:  g , e , d , c , b
+Question4:  a , e , c , d
